fixed font size on mobile devices

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -55,7 +55,7 @@ a {
 
 .center-screen {
     grid-area: center;
-    align-self: center;
+    /* align-self: center; */
 }
 
 #logo {
